# fliptrix

./: .biomeignore  .gitignore  AGENTS.md  README.md  biome.json  index.html  package.json  perf-test.html  pnpm-lock.yaml  vite.config.ts
docs/: E2E-TESTING.md  IMPLEMENTATION-PLAN.md  PRD  REFERENCE.md  TECH-SPEC.md
e2e/fixtures/: server.mjs
e2e/generic/: auto-refresh-settings.test.mjs  refresh-posts-cache.test.mjs  rendered-post-visibility.test.mjs  renderer-layout-tabs.test.mjs  screensaver-activation.test.mjs  settings-persistence.test.mjs
e2e/linux/: autostart.linux.test.mjs
e2e/support/: harness.mjs  runtime.mjs  runtime.test.mjs  ui.mjs
e2e/windows/: autostart.windows.test.mjs
src/: app-shell.test.ts  app-shell.ts  background-image.test.ts  background-image.ts  flipflap-audio.test.ts  flipflap-audio.ts  flipflap-backgrounds.test.ts  flipflap-backgrounds.ts  flipflap-japanese-integration.test.ts  flipflap-renderer.test.ts  flipflap-renderer.ts  flipflap-state.test.ts  flipflap-state.ts  logger.ts  main.ts  matrix-renderer.test.ts  matrix-renderer.ts  matrix-state.test.ts  matrix-state.ts  screensaver-overlay.ts  screensaver.test.ts  screensaver.ts  settings-ui.test.ts  settings-ui.ts  settings.test.ts  settings.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api_client.rs  autostart.rs  cache.rs  idle.rs  input.rs  lib.rs  lifecycle.rs  main.rs  models.rs  settings.rs  windowing.rs
test-artifacts/: perf-test-matrix.html
